# William-L.-Portfolio-Website

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.mjs  deploy.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  next.config.ts  package-lock.json  package.json  prisma.config.ts  pyproject.toml
.github/workflows/: deploy.yml
backend/: build.py  create_tables.py  requirements-dev.txt  requirements.txt
backend/app/: auth.py  database.py  main.py  models.py  s3.py  settings.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  globals.css
nginx/conf/: default.conf
packer/: amazon-linux-docker.pkr.hcl  secret auto pkrvars hcl example  variables.pkr.hcl
prisma/: models.prisma  schema.prisma
private/a_star_project/: a_star_gps_road_nav_system_description.md
private/open_cv_demo/: opencv_ai_demo_full_description.md
public/: Error.htm
run_scripts/: deploy.mjs  dev.js  dev.mjs  lib.mjs  packer.mjs  packer_lib.mjs  terraform_lib.mjs
src/: mdx-components.tsx  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx  tailwind-darkmode-fix.tsx
src/components/: home-background.tsx  nav-bar.tsx  text-colorer.tsx  text-typer.tsx
src/lib/: prisma.ts  s3_api.ts  server-utils.ts  utils.ts  (+1 more)
ssg/: models.py  projects.py  resumes.py
terraform/: alb.tf  certificate.tf  cloudfront.tf  cognito.tf  dev_ssh.tf  domain.tf  ec2.tf  ec2_userdata.sh  iam.tf  lambda.tf  outputs.tf  provider.tf  rds.tf  s3.tf  secrets.tf  security_groups.tf  terraform.tf  variables.tf  vpc.tf
(+101 files in other folders)
