[project]
name = "william-l-portfolio-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.7.2",
    "boto3==1.35.0",
    "fastapi==0.115.6",
    "mangum==0.19.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.18",
    "sqlalchemy==2.0.36",
    "sqlalchemy-aurora-data-api==0.2.7",
]

[dependency-groups]
dev = [
    "pydantic-settings==2.7.0",
    "uvicorn>=0.34.0",
]
